feat: registrar recogida de pedidos por meseros
